// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AlertAdminForm /> render correctly the message for invalid form 1`] = `
<div>
  <div
    className="alert__admin-form_invalid-field"
  >
    <i
      className="icon ion-ios-close-outline"
    />
     
    <FormattedMessage
      id="global.invalid.form"
      values={Object {}}
    />
  </div>
</div>
`;

exports[`<AlertAdminForm /> render correctly the message for submit failed 1`] = `
<div>
  <div
    className="alert__admin-form_server-failed-message"
  >
    <i
      className="icon ion-ios-close-outline"
    />
     
    <FormattedMessage
      id="global.error.server.form"
      values={Object {}}
    />
     
    <FormattedHTMLMessage
      id="global.contact.assistance"
      values={Object {}}
    />
  </div>
</div>
`;

exports[`<AlertAdminForm /> render correctly the message for submit succeeded 1`] = `
<div>
  <AlertAdminFormSucceededMessage />
</div>
`;

exports[`<AlertAdminForm /> render no message during submitting of form 1`] = `<div />`;

exports[`<AlertAdminForm /> render no message when the form is valid 1`] = `<div />`;
